--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -1,21 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app1="http://schemas.android.com/apk/res/com.wangaho.testpulltorefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DemoActivity" xmlns:app1="http://schemas.android.com/apk/res/com.wangaho.testpulltorefresh">
+    tools:context=".DemoActivity">
 
     <com.wangaho.testpulltorefresh.widget.PullRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#efefef"
         app1:type="ring">
 
         <ListView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        
+            android:layout_height="match_parent"
+            android:drawSelectorOnTop="false"
+            android:divider="@null"
+            android:cacheColorHint="#efefef"/>
     </com.wangaho.testpulltorefresh.widget.PullRefreshLayout>
+    <include 
+        android:id="@+id/empty_group"
+        layout="@layout/empty_view"
+        android:visibility="gone"/>
+    <include 
+        android:id="@+id/invalidatenet_group"
+        layout="@layout/invalidate_network"
+        android:visibility="gone"/>
 
 </RelativeLayout>
