--- a/res/layout/list_rental.xml
+++ b/res/layout/list_rental.xml
@@ -1,78 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/img_rental"
-        android:layout_width="130dp"
-        android:layout_height="95dp"
-        android:scaleType="centerCrop" />
-
-    <RelativeLayout
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res/com.wangaho.testpulltorefresh"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="97dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:layout_toRightOf="@id/img_rental">
-
-        <TextView
-            android:id="@+id/txt_title_rental"
-             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txt_content_rental"
-            android:ellipsize="end"
-            android:lineSpacingMultiplier="1.2"
-            android:maxLines="2"
-            android:text="高翔里 最好位置低价房"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/txt_content_rental"
-           android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txt_title_rental"
-            android:layout_marginTop="2dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="远洋荣域是远洋地产深耕"
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/txt_type_rental"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/txt_content_rental"
-            android:layout_marginLeft="15dp"
-            android:layout_toLeftOf="@+id/txt_area_rental"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:text="户型:2室1厅1卫 "
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/txt_area_rental"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/txt_content_rental"
-            android:gravity="center_vertical"
-            android:text="98平米"
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/txt_rental_price"
-             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/txt_content_rental"
-            android:gravity="center_vertical"
-            android:text="75万"
-            android:textColor="@color/red"
-            android:textSize="15sp" />
-    </RelativeLayout>
-
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        app:cardPreventCornerOverlap="true"
+        app:cardElevation="3dp"
+        app:contentPadding="3dp">	
+	<RelativeLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:background="@drawable/list_selector">
+	
+	    <ImageView
+	        android:id="@+id/img_rental"
+	        android:layout_width="130dp"
+	        android:layout_height="95dp"
+	        android:scaleType="centerCrop" />
+	
+	    <RelativeLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="97dp"
+	        android:paddingLeft="5dp"
+	        android:paddingRight="5dp"
+	        android:layout_toRightOf="@id/img_rental">
+	
+	        <TextView
+	            android:id="@+id/txt_title_rental"
+	             android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignLeft="@+id/txt_content_rental"
+	            android:ellipsize="end"
+	            android:lineSpacingMultiplier="1.2"
+	            android:maxLines="2"
+	            android:text="高翔里 最好位置低价房"
+	            android:textSize="15sp" />
+	
+	        <TextView
+	            android:id="@+id/txt_content_rental"
+	           android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_below="@id/txt_title_rental"
+	            android:layout_marginTop="2dp"
+	            android:ellipsize="end"
+	            android:maxLines="1"
+	            android:text="远洋荣域是远洋地产深耕"
+	            android:textSize="13sp" />
+	
+	        <TextView
+	            android:id="@+id/txt_type_rental"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentBottom="true"
+	            android:layout_below="@+id/txt_content_rental"
+	            android:layout_marginLeft="15dp"
+	            android:layout_toLeftOf="@+id/txt_area_rental"
+	            android:ellipsize="end"
+	            android:gravity="bottom"
+	            android:text="户型:2室1厅1卫 "
+	            android:textSize="13sp" />
+	
+	        <TextView
+	            android:id="@+id/txt_area_rental"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentBottom="true"
+	            android:layout_alignParentRight="true"
+	            android:layout_below="@id/txt_content_rental"
+	            android:gravity="bottom"
+	            android:text="98平米"
+	            android:textSize="13sp" />
+	
+	        <TextView
+	            android:id="@+id/txt_rental_price"
+	             android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentBottom="true"
+	            android:layout_alignParentLeft="true"
+	            android:layout_below="@id/txt_content_rental"
+	            android:gravity="bottom"
+	            android:text="75万"
+	            android:textColor="@color/red"
+	            android:textSize="15sp" />
+	    </RelativeLayout>
+	</RelativeLayout>
+</android.support.v7.widget.CardView>
