--- a/res/layout/loading_footer.xml
+++ b/res/layout/loading_footer.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
         android:layout_gravity="center"
         android:src="@drawable/footerloading"/>
 	<TextView
